# VAE

./: .gitignore  README.md  pyproject.toml
config/: paths.py
storage/: trained_model.pth
tests/: model_test.py
vae/: inference.py  model.py  train.py
