[tool.poetry]
name = "vae"
version = "0.1.0"
description = ""
authors = ["wideraHannes <jowid100@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
pytest = "^8.3.3"
tqdm = "^4.67.0"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

